# Polynomial

./: Cargo.toml  README.md  Untitled
.github/workflows/: rust.yml
src/: lib.rs  main.rs  mono.rs  poly.rs
tests/: monomial.rs  polynomial.rs
